--- a/tasktracker-api/src/main/resources/application.properties
+++ b/tasktracker-api/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/tasktracker
-spring.datasource.username=postgres
-spring.datasource.password=260304nn
+spring.datasource.username=*user*
+spring.datasource.password=*password*
 spring.datasource.driver-class-name =org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql= true
